2005-10-04  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * geometry.man:  Completed the description of the 
                         current procedures

2005-09-28  Arjen Markus  <arjenmarkus@users.sourceforge.net>
 
        * optimize.man:  Removed note on linear programming. It is
                         working now (not fully, perhaps though)

2005-09-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:  Declared 8.4 dependency of packages
	* optimize.man:  math::optimize, math::calculus, and
	* optimize.tcl:  math::interpolate in package index, code, and
	* optimize.test: testsuite.
	* interpolate.man:
	* interpolate.tcl:
	* interpolate.test:
	* calculus.man:
	* calculus.tcl:
	* calculus.test:

2005-09-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Declared 8.4 dependency of linalg package in
	* linalg.tcl:   package index, code, and testsuite.
	* linalg.test:

	* bessel.test:   Fixed a number of typos in the abort messages.
	* bigfloat.test: Indented abort messages for better visibility
	* bignum.test:   in the log.
	* calculus.test: Declared 8.4 dependency of bignum/bigfloat in
	* constants.test: package index, code, and testsuite.
	* elliptic.test: Removed 8.4isms from testsuites for packages
	* fourier.test:  allowing use with Tcl 8.2+
	* interpolate.test: 
	* linalg.test: 
	* math.test: 
	* optimize.test: 
	* polynomials.test: 
	* qcomplex.test: 
	* special.test: 
	* statistics.test: 
	* bigfloat.tcl: 
	* bignum.tcl: 
	* pkgIndex.tcl: 

2005-09-09  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : went back to the old algorithm to compute Pi
	  after having done much benchmarks

2005-09-06  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : new and faster algorithm to compute Pi

2005-08-31  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : added many comments and fixed some minor bugs